--- a/Barcode_Templates/Barcode_65.jrxml
+++ b/Barcode_Templates/Barcode_65.jrxml
@@ -28,15 +28,15 @@
 				<textFieldExpression><![CDATA[$F{ProductName}]]></textFieldExpression>
 			</textField>
 			<componentElement>
-				<reportElement style="Style1" x="1" y="26" width="109" height="13" uuid="0b970471-482b-4416-aad5-2c01031aa053">
+				<reportElement style="Style1" x="1" y="26" width="109" height="17" uuid="0b970471-482b-4416-aad5-2c01031aa053">
 					<printWhenExpression><![CDATA[$F{ProductName}!=""]]></printWhenExpression>
 				</reportElement>
-				<jr:barbecue xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" type="Code128" drawText="false" checksumRequired="false">
+				<jr:barbecue xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" type="Code128" drawText="true" checksumRequired="false">
 					<jr:codeExpression><![CDATA[$F{Barcode}]]></jr:codeExpression>
 				</jr:barbecue>
 			</componentElement>
 			<textField>
-				<reportElement x="1" y="40" width="109" height="14" uuid="da5f429b-13d7-4763-8335-edea59f99f85">
+				<reportElement x="1" y="43" width="109" height="14" uuid="da5f429b-13d7-4763-8335-edea59f99f85">
 					<printWhenExpression><![CDATA[$F{ProductName}!=""]]></printWhenExpression>
 				</reportElement>
 				<textElement textAlignment="Center">
