--- a/Barcode_Templates/Barcode_40.jrxml
+++ b/Barcode_Templates/Barcode_40.jrxml
@@ -33,7 +33,7 @@
 				<textElement textAlignment="Center">
 					<font size="9" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["MRP : "+$F{Price}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Price : "+$F{Price}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="1" y="11" width="109" height="16" uuid="4d8fbe84-a9a7-44b4-a90b-d98e883c7123">
