--- a/Barcode_Templates/Barcode_50X25MM_Double.jrxml
+++ b/Barcode_Templates/Barcode_50X25MM_Double.jrxml
@@ -42,7 +42,7 @@
 				<textElement textAlignment="Center">
 					<font size="9" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["MRP : "+$F{Price}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Price : "+$F{Price}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
